routing/routing.step-02.k8s.yaml
---
# Deploy 'service-b-v1-0-0-deployment' Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1-0-0-deployment
  namespace: routing-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: 1.0.0
  template:
    metadata:
      labels:
        app: service-b
        version: 1.0.0
        api: alpha-api
    spec:
      serviceAccountName: service-b
      containers:
      - name: service-b
        image: patrice1972/routing-demo-service-b:1.0.0
        ports:
        - protocol: TCP
          containerPort: 3000
